app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);

  /* Custom Colors */
  --color-primary: #4CAF4F;
  --color-secondary: #263238;
  --color-neutralGrey: #717171;
  --color-lGrey: #89939E;
  --color-silver: #F5F7FA;
  --color-tint1: #66BB69;
  --color-tint5: #E8F5E9;

  /* Custom Shadows */
  --shadow-soft: 0px 2px 4px rgba(171, 189, 209, 0.2);
  --shadow-card: 0px 8px 16px rgba(171, 189, 209, 0.4);
}



body {
  background: var(--background);
  color: var(--foreground);
  font-family: 'Inter', sans-serif;
  overflow-x: hidden;
}

